--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+vos<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -32,11 +32,11 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Que es Passt</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#objetivos">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#objetivos">La idea</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Objetivos</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Primeros Pasos</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Avances</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Pasos a Seguir</a></li>
                 </ul>
             </div>
         </nav>
